--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -531,7 +531,7 @@ img.image-center {
     padding: 5px;
 }
 
-.minicurso-radio:hover{
+.minicurso-radio-active:hover{
     cursor: pointer;
     background-color: #00aadd;
 }
