--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -547,3 +547,7 @@ img.image-center {
 .minicurso-radio-checked{
     background-color: #00aadd;
 }
+
+.minicursos-panel{
+    text-align: center;
+}
