--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -14,7 +14,7 @@
               <th>local</th>
               <th>palestrante</th>
               <th>vagas</th>
-              <th>editar</th>
+              <th>ação</th>
             </tr>
           </thead>
           <tbody>
@@ -32,7 +32,10 @@
                 <td>{{course.place|default:"<span class=\"alert-box alert\">sem local</span>"}}</td>
                 <td>{{course.speaker|default:"<span class=\"alert-box alert\">sem palestrante</span>"}}</td>
                 <td>{{course.get_number_of_subscribers}}/{{course.vacancies}}</td>
-                <td><a href="{% url "management_courses_edit" course.pk %}"><i class="fa fa-pencil-square-o fa-2x"></i></td>
+                <td>
+                  <a href="{% url "management_courses_edit" course.pk %}"><i class="fa fa-pencil-square-o fa-2x"></i></a>
+                  <a href="{% url "management_courses_members" course.pk %}"><i class="fa fa-users fa-2x"></i></a>
+                </td>
               </tr>
             {% endfor %}
           </tbody>
