--- a/website/static/production/css/app.css
+++ b/website/static/production/css/app.css
@@ -1413,7 +1413,7 @@ select {
   border-color: #3a945b;
   color: white;
 }
-.alert-box.alert {
+.alert-box.alert, .alert-box.error {
   background-color: #f04124;
   border-color: #de2d0f;
   color: white;
@@ -1968,15 +1968,15 @@ button.success:hover, button.success:focus, .button.success:hover, .button.succe
 button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
   color: white;
 }
-button.alert, .button.alert {
+button.alert, button.error, .button.alert, .button.error {
   background-color: #f04124;
   border-color: #007095;
   color: white;
 }
-button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
+button.alert:hover, button.error:hover, button.alert:focus, button.error:focus, .button.alert:hover, .button.error:hover, .button.alert:focus, .button.error:focus {
   background-color: #007095;
 }
-button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
+button.alert:hover, button.error:hover, button.alert:focus, button.error:focus, .button.alert:hover, .button.error:hover, .button.alert:focus, .button.error:focus {
   color: white;
 }
 button.large, .button.large {
@@ -2070,7 +2070,7 @@ button.disabled.success:hover, button.disabled.success:focus, button[disabled].s
 button.disabled.success:hover, button.disabled.success:focus, button[disabled].success:hover, button[disabled].success:focus, .button.disabled.success:hover, .button.disabled.success:focus, .button[disabled].success:hover, .button[disabled].success:focus {
   background-color: #43ac6a;
 }
-button.disabled.alert, button[disabled].alert, .button.disabled.alert, .button[disabled].alert {
+button.disabled.alert, button.disabled.error, button[disabled].alert, button[disabled].error, .button.disabled.alert, .button.disabled.error, .button[disabled].alert, .button[disabled].error {
   background-color: #f04124;
   border-color: #007095;
   color: white;
@@ -2078,13 +2078,13 @@ button.disabled.alert, button[disabled].alert, .button.disabled.alert, .button[d
   opacity: 0.7;
   box-shadow: none;
 }
-button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
+button.disabled.alert:hover, button.disabled.error:hover, button.disabled.alert:focus, button.disabled.error:focus, button[disabled].alert:hover, button[disabled].error:hover, button[disabled].alert:focus, button[disabled].error:focus, .button.disabled.alert:hover, .button.disabled.error:hover, .button.disabled.alert:focus, .button.disabled.error:focus, .button[disabled].alert:hover, .button[disabled].error:hover, .button[disabled].alert:focus, .button[disabled].error:focus {
   background-color: #007095;
 }
-button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
+button.disabled.alert:hover, button.disabled.error:hover, button.disabled.alert:focus, button.disabled.error:focus, button[disabled].alert:hover, button[disabled].error:hover, button[disabled].alert:focus, button[disabled].error:focus, .button.disabled.alert:hover, .button.disabled.error:hover, .button.disabled.alert:focus, .button.disabled.error:focus, .button[disabled].alert:hover, .button[disabled].error:hover, .button[disabled].alert:focus, .button[disabled].error:focus {
   color: white;
 }
-button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
+button.disabled.alert:hover, button.disabled.error:hover, button.disabled.alert:focus, button.disabled.error:focus, button[disabled].alert:hover, button[disabled].error:hover, button[disabled].alert:focus, button[disabled].error:focus, .button.disabled.alert:hover, .button.disabled.error:hover, .button.disabled.alert:focus, .button.disabled.error:focus, .button[disabled].alert:hover, .button[disabled].error:hover, .button[disabled].alert:focus, .button[disabled].error:focus {
   background-color: #f04124;
 }
 
@@ -3567,7 +3567,7 @@ kbd {
 .label.round {
   border-radius: 1000px;
 }
-.label.alert {
+.label.alert, .label.error {
   background-color: #f04124;
   color: white;
 }
@@ -4090,7 +4090,7 @@ ul.pagination li {
   height: 100%;
   display: block;
 }
-.progress.alert .meter {
+.progress.alert .meter, .progress.error .meter {
   background: #f04124;
   height: 100%;
   display: block;
@@ -4425,7 +4425,7 @@ dialog[open] {
 .split.button.secondary span:after {
   border-color: white transparent transparent transparent;
 }
-.split.button.alert span {
+.split.button.alert span, .split.button.error span {
   border-left-color: rgba(255, 255, 255, 0.5);
 }
 .split.button.success span {
@@ -5688,15 +5688,15 @@ meta.foundation-mq-topbar {
 .top-bar-section ul li > a.button.success:hover, .top-bar-section ul li > a.button.success:focus {
   color: white;
 }
-.top-bar-section ul li > a.button.alert {
+.top-bar-section ul li > a.button.alert, .top-bar-section ul li > a.button.error {
   background-color: #f04124;
   border-color: #007095;
   color: white;
 }
-.top-bar-section ul li > a.button.alert:hover, .top-bar-section ul li > a.button.alert:focus {
+.top-bar-section ul li > a.button.alert:hover, .top-bar-section ul li > a.button.error:hover, .top-bar-section ul li > a.button.alert:focus, .top-bar-section ul li > a.button.error:focus {
   background-color: #007095;
 }
-.top-bar-section ul li > a.button.alert:hover, .top-bar-section ul li > a.button.alert:focus {
+.top-bar-section ul li > a.button.alert:hover, .top-bar-section ul li > a.button.error:hover, .top-bar-section ul li > a.button.alert:focus, .top-bar-section ul li > a.button.error:focus {
   color: white;
 }
 .top-bar-section ul li > button {
@@ -5735,15 +5735,15 @@ meta.foundation-mq-topbar {
 .top-bar-section ul li > button.success:hover, .top-bar-section ul li > button.success:focus {
   color: white;
 }
-.top-bar-section ul li > button.alert {
+.top-bar-section ul li > button.alert, .top-bar-section ul li > button.error {
   background-color: #f04124;
   border-color: #007095;
   color: white;
 }
-.top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.alert:focus {
+.top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.error:hover, .top-bar-section ul li > button.alert:focus, .top-bar-section ul li > button.error:focus {
   background-color: #007095;
 }
-.top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.alert:focus {
+.top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.error:hover, .top-bar-section ul li > button.alert:focus, .top-bar-section ul li > button.error:focus {
   color: white;
 }
 .top-bar-section ul li:hover:not(.has-form) > a {
@@ -6806,7 +6806,7 @@ body {
 }
 
 .menu-topo {
-  background-image: url('/17/static/img/header.png?1405619194');
+  background-image: url('/17/static/img/header.png?1400183898');
   background-repeat: no-repeat;
   background-position: center top;
   text-transform: uppercase;
@@ -6835,7 +6835,7 @@ main {
 
 .hero {
   padding-top: 10px;
-  background: url('/17/static/img/hero-background.jpg?1405619194') no-repeat center center;
+  background: url('/17/static/img/hero-background.jpg?1405275795') no-repeat center center;
   background-size: cover;
 }
 @media only screen and (min-width: 64.063em) {
