--- a/management/templates/management/messages_new.html
+++ b/management/templates/management/messages_new.html
@@ -14,6 +14,9 @@
 						<div class="to-email-container">
 							{% include "management/render_field.html" with field=form.to_email width="large-6" only %}
 						</div>
+						<div class="to-course-container">
+							{% include "management/render_field.html" with field=form.to_course width="large-6" only %}
+						</div>
 					</div>
 					<div class="to-email-alert row">
 						<div class="large-12 columns">
@@ -51,12 +54,19 @@
 			var value = $(this).val();
 			var input_container = $('.to-email-container');
 			var alert_container = $('.to-email-alert');
+			var course_container = $('.to-course-container');
 			if (value == "one") {
 				input_container.removeClass('hide');
 				alert_container.addClass('hide');
+				course_container.addClass('hide');
+			} else if(value == "course"){
+				input_container.addClass('hide');
+				alert_container.addClass('hide');
+				course_container.removeClass('hide');
 			} else {
 				input_container.addClass('hide');
 				alert_container.removeClass('hide');
+				course_container.addClass('hide');
 			}
 
 		}).change();
