Implementa relatório de presença por evento
Um parâmetro na URL permite diferenciar entre um relatório geral e um
relatório de evento. Se o ID do evento é usado, o queryset de usuários
muda pra incluir somente os usuários cadastrados no evento e a coluna
"presença" é removida, já que em um evento só a única coisa que
interessa é que as pessoas estavam lá: elas tem 100% de presença no
próprio evento.

As funções geradoras foram refatoradas: agora devem ter a assinatura
(output, headers, data). Caso seja necessário adicionar algum outro tipo
de saída, basta implementar o backend correspondente (e coisas do tipo
escolher o content-type)

--- a/management/templates/management/attendance.html
+++ b/management/templates/management/attendance.html
@@ -20,7 +20,10 @@
 								<td>{{event.name}}</td>
 								<td>{{event.attendance}}</td>
 								<td><a href="{% url "management_attendance_submit" event.pk %}" class="small expand button">Cadastrar</a></td>
-								<td><a href="#" class="small expand button">Relatório</a></td>
+								<td class="text-center">
+									<a title="Relatório em PDF" href="{% url "management_attendance_report" event.pk "pdf" %}"><i class="fa fa-2x fa-file-pdf-o"></i></a>
+									<a title="Relatório em XLS (Excel)" href="{% url "management_attendance_report" event.pk "xls" %}"><i class="fa fa-2x fa-file-excel-o"></i></a>
+								</td>
 							</tr>
 						{% endfor %}
 					</tbody>
