--- a/management/templates/management/messages.html
+++ b/management/templates/management/messages.html
@@ -25,12 +25,25 @@
 		<div class="large-12 columns">
 			<h1 class="blue-bg left">Mensagens gerais</h1>
 			<table class="email-list">
+				<thead>
+					<th>Usuario</th>
+					<th>Assunto</th>
+					<th>Data</th>
+					<th>Para</th>
+				</thead>
 				<tbody>
 					{% for message in announcements %}
 						<tr class="email-preview" data-email-url="{% url "management_messages_detail" message.pk %}">
 							<td class="email-from">{{message.from_name}}</td>
 							<td class="email-body">{{message.body}}</td>
 							<td class="email-date">{{message.date_sent|date:"d/m/Y H:i"}}</td>
+							<td class="email-to">
+								{% if message.to_email %}
+									{{message.to_email}}
+								{% elif message.to_course %}
+									{{message.to_course}}
+								{% endif %}
+							</td>
 						</tr>
 					{% endfor %}
 				</tbody>
