--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -2,8 +2,8 @@
 
 {% block user_content %}
   <div class="row">
-  <h1 class="blue-bg">Minicursos</h1>
     <div class="large-12 columns">
+      <h1 class="blue-bg">Minicursos</h1>
       <div class="management-table-scroll">
         <table>
           <thead>
@@ -45,7 +45,7 @@
   </div>
   <div class="row">
     <div class="large-12 columns">
-      <a class="button" href="{% url "management_courses_add" %}">Adicionar minicurso</a>
+      <a class="button expand" href="{% url "management_courses_add" %}">Adicionar minicurso</a>
     </div>
   </div>
 {% endblock %}
