--- a/management/templates/management/events.html
+++ b/management/templates/management/events.html
@@ -3,13 +3,15 @@
 {% load sekizai_tags i18n mathfilters semcomp %}
 
 {% block user_content %}
-<div class="row">
-	<h1 class="blue-bg">Eventos</h1>
-	<div class="large-6 columns">
-		<a class="button" href="{% url "management_events_add" %}">Adicionar evento</a>
-	</div>
-</div>
-<div class="row">
-	{% render_schedule "management" %}
-</div>
+  <div class="row">
+    <div class="large-12 columns">
+      <h1 class="blue-bg">Eventos</h1>
+      <a class="button expand" href="{% url "management_events_add" %}">Adicionar evento</a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-12 columns">
+      {% render_schedule "management" %}
+    </div>
+  </div>
 {% endblock %}
