adiciona evento na presença

--- a/management/templates/management/attendance_submit.html
+++ b/management/templates/management/attendance_submit.html
@@ -12,7 +12,7 @@
 				<div class="row collapse">
 					<label for="badge-number-input">Número do crachá/Número USP</label>
 					<div class="small-8 columns">
-						<input id="badge-number-input" name="badge-number" type="text" pattern="[0-9]+" maxlength="8">
+						<input id="badge-number-input" name="badge-number" type="tel" pattern="[0-9]+" maxlength="8">
 						<small class="error">Somente números e no máximo 8 dígitos</small>
 					</div>
 					<div class="small-4 columns">
