--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -44,8 +44,11 @@
     </div>
   </div>
   <div class="row">
-    <div class="large-12 columns">
+    <div class="large-6 columns">
       <a class="button expand" href="{% url "management_courses_add" %}">Adicionar minicurso</a>
     </div>
+	<div class="large-6 columns">
+	  <a class="button expand" href="{% url "management_courses_notify" %}">Notificar usuários</a>
+	</div>
   </div>
 {% endblock %}
