--- a/management/templates/emails/course_notification-body-html.html
+++ b/management/templates/emails/course_notification-body-html.html
@@ -33,6 +33,18 @@
 															vai acontecer no <strong>{{course.place}}</strong>. Clique no mapa para se localizar.</p>
 															<p>Não se esqueça de levar seu crachá, caso o esqueça não será permitido participar do minicurso.
 															Caso tenha algum problema, procure alguém da organização!</p>
+
+															<p><strong>Material</strong></p>
+															<p>Se você puder, leve um notebook para o minicurso, você poderá executar os softwares necessários para os
+															minicursos usando máquinas virtuais que providenciaremos.</p>
+
+															<p><strong>Transporte</strong></p>
+															<p>Se seu minicurso é no Campus 2, fique atento: não há ônibus da USP fazendo o trajeto Campus 1 &lt;-&gt; Campus 2
+															devido à greve. Se você pode, ofereça uma carona para seus amigos. Caso prefira ir de ônibus, há ônibus passando
+															na saída do observatório do Campus 1 que levam direto à entrada do Campus 2.</p>
+
+															<p><strong>Credenciamento</strong></p>
+															<p>Se você ainda não pegou seu crachá, vá a partir das 7h00 na sala do PET (Sala 1-103, bloco 1)</p>
 														</td>
 														<td class="expander"></td>
 													</tr>
