texto email minicursos

--- a/management/templates/emails/course_notification-body-text.html
+++ b/management/templates/emails/course_notification-body-text.html
@@ -16,10 +16,13 @@ necessários para os minicursos usando máquinas virtuais que providenciaremoA.
 Transporte
 ==========
 
-Se seu minicurso é no Campus 2, fique atento: não há ônibus da USP fazendo o trajeto
-Campus 1 &lt;-&gt; Campus 2 devido à greve. Se você pode, ofereça uma carona para
-seus amigos. Caso prefira ir de ônibus, há ônibus passando na saída do observatório
-do Campus 1 que levam direto à entrada do Campus 2.
+Se seu minicurso é no Campus 2, fique atento: há possibilidade de os ônibus da
+USP não circularem fazendo o trajeto Campus 1 &lt;-&gt; Campus 2 devido à
+greve. Se você pode, ofereça uma carona para seus amigos. Caso prefira ir de
+ônibus, há ônibus passando na saída do observatório do Campus 1 que levam
+direto à entrada do Campus 2. O ônibus passa no ponto as 7h15, depois às 8h15.
 
 Credenciamento
+==============
+
 Se você ainda não pegou seu crachá, vá a partir das 7h00 na sala do PET (Sala 1-103, bloco 1)
