--- a/management/templates/emails/course_notification-body-html.html
+++ b/management/templates/emails/course_notification-body-html.html
@@ -39,9 +39,10 @@
 															minicursos usando máquinas virtuais que providenciaremos.</p>
 
 															<p><strong>Transporte</strong></p>
-															<p>Se seu minicurso é no Campus 2, fique atento: não há ônibus da USP fazendo o trajeto Campus 1 &lt;-&gt; Campus 2
-															devido à greve. Se você pode, ofereça uma carona para seus amigos. Caso prefira ir de ônibus, há ônibus passando
-															na saída do observatório do Campus 1 que levam direto à entrada do Campus 2.</p>
+															<p>Se seu minicurso é no Campus 2, fique atento: há possibilidade de os ônibus da USP não funcionarem amanhã
+															fazendo o trajeto Campus 1 &lt;-&gt; Campus 2 devido à greve. Se você pode, ofereça uma carona para seus
+															amigos. Caso prefira ir de ônibus, há ônibus passando na saída do observatório do Campus 1 que levam direto
+															à entrada do Campus 2. O ônibus passa no ponto as 7h15, e depois às 8h15.</p>
 
 															<p><strong>Credenciamento</strong></p>
 															<p>Se você ainda não pegou seu crachá, vá a partir das 7h00 na sala do PET (Sala 1-103, bloco 1)</p>
